2004-01-19  Nick Garnett  <nickg@calivar.com>

	* include/config_keys.h (CYG_IO_GET_CONFIG_DISK_INFO): Added DISK
	IO config key base definition.

2003-11-27  David Woodhouse  <dwmw2@infradead.org>

	* include/config_keys.h: Add CYG_IO_SET_CONFIG_FLASH_FIS_NAME

2003-11-06   Billy <billy@babababa.net>

	* doc/io.sgml: In the TTY section swap "\n\r" to "\r\n" to match
	reality.
	
2003-03-25  Jonathan Larmour  <jifl@eCosCentric.com>

	* include/config_keys.h: Define CYG_IO_SET_CONFIG_SERIAL_OUTPUT_FLUSH
	to be same as CYG_IO_GET_CONFIG_SERIAL_OUTPUT_FLUSH.
	Ditto for ..._INPUT_FLUSH.

2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/io.cdl: Fix doc link.

2002-03-12  Nick Garnett  <nickg@redhat.com>

	* doc/io.sgml: Generally sorted out, reformetted, folded. SMP
	considerations added to various parts of the document.

2002-01-23  Jonathan Larmour  <jlarmour@redhat.com>

	* include/config_keys.h: Add config keys for flash block drivers.

2001-09-27  Jonathan Larmour  <jlarmour@redhat.com>

	* src/io_diag.c: Delete. No longer used.
	* cdl/io.cdl: Don't build io_diag.c.

2001-04-18  Jesper Skov  <jskov@redhat.com>
	Case 105926
	* src/io_file.c (falloc): Don't return -EMFILE, but EMFILE. Found
	by Andrew Lunn.

2000-11-22  Jonathan Larmour  <jlarmour@redhat.com>

	* cdl/io.cdl: Only put ioinit.cxx in extras.o. Build others normally.
	* src/iosys.c: Move devtab table definition from here....
	* src/ioinit.cxx: .... to here

2000-11-21  Bart Veer  <bartv@redhat.com>

	* src/iosys.c: 
	* include/devtab.h:
	Add dummy implementations for select, get_config and set_config

2000-09-07  Jesper Skov  <jskov@redhat.com>

	* include/devtab.h (cyg_devtab_entry_t): Fix syntax problem.

2000-09-04  Jonathan Larmour  <jlarmour@redhat.com>

	* include/devtab.h (cyg_devtab_entry_t): Apply CYG_HAL_TABLE_TYPE	

2000-08-01  Jonathan Larmour  <jlarmour@redhat.co.uk>

	* include/config_keys.h: 
	Add keys to support flow control, line status callbacks,
	hardware breaks and termios.