@@ -1,3 +1,8 @@
+2004-04-16  Jonathan Larmour  <jifl@eCosCentric.com>
+
+	* src/iosys.c (cyg_io_lookup): Use union to avoid aliasing problems
+	with compiler.
+
 2004-01-19  Nick Garnett  <nickg@calivar.com>
 
 	* include/config_keys.h (CYG_IO_GET_CONFIG_DISK_INFO): Added DISK
